--- a/qa.html
+++ b/qa.html
@@ -13,6 +13,11 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
+            <div class="hamburger-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
             <nav>
                 <ul>
                     <li><a href="index.html">首頁</a></li>
@@ -24,9 +29,9 @@
                             <a href="#"></a>
                         </div>
                     </li>
-                    <li><a href="spot.html">現貨商品</a></li>
-                    <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li> </ul>
+                    <li><a href="spot.html">現貨商品</a></li> <li><a href="notice.html">交易須知</a></li>
+                    <li><a href="qa.html">Q&A</a></li>
+                </ul>
             </nav>
         </div>
         <div class="navbar-right">
