--- a/notice.html
+++ b/notice.html
@@ -14,7 +14,13 @@
 <body>
     <header class="navbar">
         <div class="navbar-left">
-            <a href="index.html" class="logo">Elqamar</a> <nav>
+            <a href="index.html" class="logo">Elqamar</a>
+            <div class="hamburger-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <nav>
                 <ul>
                     <li><a href="index.html">首頁</a></li>
                     <li class="dropdown">
@@ -25,8 +31,7 @@
                             <a href="#"></a>
                         </div>
                     </li>
-                    <li><a href="spot.html">現貨商品</a></li>
-                    <li><a href="">交易須知</a></li>
+                    <li><a href="spot.html">現貨商品</a></li> <li><a href="notice.html">交易須知</a></li>
                     <li><a href="qa.html">Q&A</a></li>
                 </ul>
             </nav>
