--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar</title>
-    <link rel="stylesheet" href="css/common.css">
+    <title>Elqamar | 首頁</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
 </head>
@@ -29,7 +29,8 @@
                             <a href="#"></a>
                         </div>
                     </li>
-                    <li><a href="spot.html">現貨商品</a></li> <li><a href="notice.html">交易須知</a></li>
+                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="notice.html">交易須知</a></li>
                     <li><a href="qa.html">Q&A</a></li>
                 </ul>
             </nav>
@@ -42,34 +43,40 @@
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
                 <span class="cart-count">0</span>
-            <!-- 小紅點會自動插入這裡 -->
             </a>
-
             <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
             </a>
             <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
                 <img src="images/fb.png" alt="FB">
             </a>
-            </div>
+        </div>
     </header>
 
-    <section class="carousel">
-        <div class="carousel-track">
-            <img src="images/無結帳.png" alt="輪播1" />
-            <img src="images/限時開團.png" alt="輪播2" />
-            <!-- <img src="images/samplephoto.png" alt="輪播3" /> -->
-        </div>
-        <button class="carousel-btn prev">&#10094;</button>
-        <button class="carousel-btn next">&#10095;</button>
-    </section>
+    <main>
+        <section class="carousel-container">
+            <div class="carousel">
+                <div class="carousel-slide">
+                    <img src="images/carousel1.png" alt="Carousel Image 1">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/carousel2.png" alt="Carousel Image 2">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/carousel3.png" alt="Carousel Image 3">
+                </div>
+            </div>
+            <button class="prev-button">&lt;</button>
+            <button class="next-button">&gt;</button>
+            <div class="carousel-dots"></div>
+        </section>
 
-    <section class="product-section">
-        <h2>限時開團</h2> 
-        <div class="product-grid"></div>
-    </section>
-
-    <div class="pagination"></div>
+        <section class="product-section">
+            <h2>熱門商品</h2>
+            <div class="product-grid">
+                </div>
+        </section>
+    </main>
 
     <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
@@ -84,7 +91,6 @@
 
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
-    <script src="js/common.js"></script>
     <script src="js/index.js"></script>
-    </body>
+</body>
 </html>
