--- a/spot.html
+++ b/spot.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品分類一 - Elqamar</title>
-    <link rel="stylesheet" href="css/common.css">
+    <title>現貨商品 - Elqamar</title>
     <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
 </head>
@@ -29,7 +29,8 @@
                             <a href="#"></a>
                         </div>
                     </li>
-                    <li><a href="spot.html">現貨商品</a></li> <li><a href="notice.html">交易須知</a></li>
+                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="notice.html">交易須知</a></li>
                     <li><a href="qa.html">Q&A</a></li>
                 </ul>
             </nav>
@@ -42,9 +43,7 @@
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
                 <span class="cart-count">0</span>
-            <!-- 小紅點會自動插入這裡 -->
             </a>
-
             <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
             </a>
@@ -53,10 +52,9 @@
             </a>
         </div>
     </header>
-    
 
     <section class="product-section">
-        <h2>現貨商品</h2> 
+        <h2>現貨商品</h2>
         <div class="product-grid"></div>
     </section>
 
@@ -72,10 +70,9 @@
     </footer>
 
     <div id="toast-notification" class="toast-notification"></div>
-    
+
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
-    <script src="js/common.js"></script>
     <script src="js/spot.js"></script>
 </body>
 </html>
