--- a/index.html
+++ b/index.html
@@ -57,13 +57,10 @@
         <section class="carousel-container">
             <div class="carousel">
                 <div class="carousel-slide">
-                    <img src="images/carousel1.png" alt="Carousel Image 1">
+                    <img src="images/無結帳.png" alt="Carousel Image 1">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/carousel2.png" alt="Carousel Image 2">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/carousel3.png" alt="Carousel Image 3">
+                    <img src="images/限時開團.png" alt="Carousel Image 2">
                 </div>
             </div>
             <button class="prev-button">&lt;</button>
