--- a/idv.html
+++ b/idv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>預購商品 - 第五人格 - Elqamar</title>
+    <title>商品分類一 - Elqamar</title>
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
@@ -13,18 +13,13 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <div class="hamburger-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
             <nav>
                 <ul>
                     <li><a href="index.html">首頁</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
                         <div class="dropdown-content">
-                            <a href="idv.html">第五人格</a>
+                            <a href="">第五人格</a>
                             <a href="#"></a>
                             <a href="#"></a>
                         </div>
@@ -43,7 +38,9 @@
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
                 <span class="cart-count">0</span>
+            <!-- 小紅點會自動插入這裡 -->
             </a>
+
             <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
             </a>
@@ -52,11 +49,11 @@
             </a>
         </div>
     </header>
+    
 
     <section class="product-section">
-        <h2>第五人格 預購商品</h2>
-        <div class="product-grid">
-            </div>
+        <h2>預購商品 - 第五人格</h2> 
+        <div class="product-grid"></div>
     </section>
 
     <div class="pagination"></div>
@@ -71,7 +68,7 @@
     </footer>
 
     <div id="toast-notification" class="toast-notification"></div>
-
+    
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
     <script src="js/idv.js"></script>
