--- a/qa.html
+++ b/qa.html
@@ -13,11 +13,6 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <div class="hamburger-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
             <nav>
                 <ul>
                     <li><a href="index.html">首頁</a></li>
@@ -31,15 +26,10 @@
                     </li>
                     <li><a href="spot.html">現貨商品</a></li>
                     <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li>
-                </ul>
+                    <li><a href="qa.html">Q&A</a></li> </ul>
             </nav>
         </div>
         <div class="navbar-right">
-            <div class="search-container">
-                <input type="text" class="search-input hidden" placeholder="搜尋商品...">
-                <a href="#" class="icon-link search-toggle"><img src="images/search.png" alt="搜尋"></a>
-            </div>
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
                 <span class="cart-count">0</span>
