--- a/spot.html
+++ b/spot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>現貨商品 - Elqamar</title>
+    <title>商品分類一 - Elqamar</title>
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
@@ -13,11 +13,6 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <div class="hamburger-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
             <nav>
                 <ul>
                     <li><a href="index.html">首頁</a></li>
@@ -29,7 +24,7 @@
                             <a href="#"></a>
                         </div>
                     </li>
-                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="">現貨商品</a></li>
                     <li><a href="notice.html">交易須知</a></li>
                     <li><a href="qa.html">Q&A</a></li>
                 </ul>
@@ -43,7 +38,9 @@
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
                 <span class="cart-count">0</span>
+            <!-- 小紅點會自動插入這裡 -->
             </a>
+
             <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
             </a>
@@ -52,9 +49,10 @@
             </a>
         </div>
     </header>
+    
 
     <section class="product-section">
-        <h2>現貨商品</h2>
+        <h2>現貨商品</h2> 
         <div class="product-grid"></div>
     </section>
 
@@ -70,7 +68,7 @@
     </footer>
 
     <div id="toast-notification" class="toast-notification"></div>
-
+    
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
     <script src="js/spot.js"></script>
