--- a/notice.html
+++ b/notice.html
@@ -64,7 +64,7 @@
                 <div class="left-text" >● 喊單後需先匯款，收完款後才會下單<br>● 未在期限匯款將發布黑單or警告單<br>● 抱盒商品有概率無法湊齊該柄圖全員，不提供退換貨服務<br>
                 ● 請確認資料表的內容是否正確，如有錯誤請立即聯繫，如未確認導致訂單錯誤，將不提供退換貨<br>● 代購屬於客製化訂單，不符合7天鑑賞期<br>● 交易成功達五次者能獲得折扣優惠<br>
                 ● 無開箱不售後，若商品有缺漏，請私訊開箱影片與缺漏品項<br><p style="color: red;">● 出貨後如未取貨導致退回，將酌收30元後再次出貨，仍被退回則依次疊加30元</p></div>
-                <div class="right-text" >● 未成年交易視為監護人同意<br>● 客製化服務為代買，無法保證真偽，請自行評估風險與責任<br>● 不與黑灰單交易<br>● 視情況進行二補<br>
+                <div class="right-text" >● 未成年交易視為監護人同意<br>● 客製化服務為代買，無法保證真偽，請自行評估風險與責任<br>● 不與黑灰單交易<br>● 視情況進行二補（尾款補繳）<br>
                 <p style="color: red;">● 除寄錯/少寄外，售後不退，請確認清楚再購買</p>● 物品需一段時間等待<br><p style="color: red;">● 商品皆默認初傷、運損</p></div>
             </div>
     </section>
