--- a/notice.html
+++ b/notice.html
@@ -52,8 +52,18 @@
             <div class="step">2. 私訊確認訂單資料</div>
             <div class="step">3. 選擇付款方式</div>
             <div class="step">4. 等待商品到台</div>
-            <div class="step">5. 二補價格</div>
-            <div class="step">6. 物流配送</div>
+            <div class="step">5. 二補價格&選擇寄貨方式</div>
+            <div class="step">6. 商品寄件</div>
+        </div>            
+    </section>
+    <section class="product-section">
+        <h2>購買流程(現貨商品)</h2>
+        <div class="step-container">
+            <div class="step">1. 選擇商品</div>
+            <div class="step">2. 私訊確認訂單資料</div>
+            <div class="step">3. 選擇寄貨方式</div>
+            <div class="step">4. 提供連結下單</div>
+            <div class="step">5. 商品寄件</div>
         </div>            
     </section>
 
