--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="carousel">
         <div class="carousel-track">
             <img src="images/無結帳.png" alt="輪播1" />
-            <img src="images/限時開團.png" alt="輪播2" />
+<!--             <img src="images/限時開團.png" alt="輪播2" /> -->
             <!-- <img src="images/samplephoto.png" alt="輪播3" /> -->
         </div>
         <button class="carousel-btn prev">&#10094;</button>
