--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar—商品細項</title>
+    <title>Elqamar商品細項</title>
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
@@ -54,17 +54,9 @@
                     <div class="quantity-and-favorite">
                         <label for="quantity-select">數量：</label>
                         <select id="quantity-select" class="quantity-select">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
+                        <!-- 數量選項將由 JS 動態插入 -->
                         </select>
+
                     </div>
                     <button id="add-to-cart-btn" class="btn add-to-cart-btn">加入購物車</button>
                 </div>
